[gd_scene load_steps=8 format=3 uid="uid://bqw4r3bpuc47n"]

[ext_resource type="Texture2D" uid="uid://bstdqitlc5h81" path="res://Assets/textures/bg.png" id="1_7g7rf"]
[ext_resource type="Script" path="res://Scripts/game.gd" id="1_c5q7a"]
[ext_resource type="PackedScene" uid="uid://dde71cvkx7v62" path="res://Scenes/Player/player.tscn" id="2_es0ur"]
[ext_resource type="PackedScene" uid="uid://6scqq6r24snp" path="res://Scenes/Enemies/enemy_spawner.tscn" id="4_hhj1m"]
[ext_resource type="PackedScene" uid="uid://cthod0rgvnurb" path="res://Scenes/UI/hud.tscn" id="5_fw757"]
[ext_resource type="AudioStream" uid="uid://dkc7fxqwrks3t" path="res://Assets/audio/hit.wav" id="6_w74b4"]
[ext_resource type="AudioStream" uid="uid://cikyjbjeuassv" path="res://Assets/audio/explode.wav" id="7_uxmei"]

[node name="Game" type="Node2D"]
script = ExtResource("1_c5q7a")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_7g7rf")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_es0ur")]
position = Vector2(152, 374)

[node name="EnemySpawner" parent="." instance=ExtResource("4_hhj1m")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("5_fw757")]

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_w74b4")

[node name="PlayerExplodeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_uxmei")

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
